add_library(proton_co STATIC co.cpp alog.cpp switch_context.s x.cpp)
target_link_libraries(proton_co PUBLIC pthread c++abi)
# target_compile_options(proton_co PUBLIC "-DNEW")
if(${CACS})
    target_compile_options(proton_co PUBLIC "-DCACSTH")
    if(${CACSTAIL})
        target_compile_options(proton_co PUBLIC "-DCACSTAIL")
    endif()
endif()
target_compile_options(proton_co PUBLIC "-DRANDOMIZE_SP")
target_include_directories(proton_co PUBLIC ../)
