[package]
name = "rust-writefully"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
futures = "0.3.27"
genawaiter = "0.99.1"
task-group = "0.2.2"
tokio = {version="1.27.0", features = ["rt", "macros", "rt-multi-thread"]}

[profile.release-with-info]
inherits = "release"
debug = true